force-app/main/default/objects/Orgeh__c/Orgeh__c.object-meta.xml
<CustomObject>
    <label>Orgeh</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Orgeh Name (Queue)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orgeh</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>