force-app/main/default/objects/Orgeh__c/fields/Divisi__c.field-meta.xml
<CustomField>
    <fullName>Divisi__c</fullName>
    <label>Divisi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Divisi</valueSetName>
    </valueSet>
</CustomField>