force-app/main/default/objects/Orgeh__c/fields/Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set__c</fullName>
    <label>Permission Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>