force-app/main/default/objects/Orgeh__c/fields/Permission_Set_Id__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Id__c</fullName>
    <label>Permission Set Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>