force-app/main/default/objects/Orgeh__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>