force-app/main/default/objects/Orgeh__c/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <label>Profile Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>