force-app/main/default/objects/Orgeh__c/fields/Role_Id__c.field-meta.xml
<CustomField>
    <fullName>Role_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>