force-app/main/default/objects/Orgeh__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Id__c</columns>
    <columns>Role__c</columns>
    <columns>Divisi__c</columns>
    <columns>Cost_Center__c</columns>
    <columns>Cost_Center_Description__c</columns>
    <columns>Queue_Id__c</columns>
    <columns>Profile__c</columns>
    <columns>Permission_Set__c</columns>
    <columns>Permission_Set_Id__c</columns>
    <columns>Profile_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>